kubernetes/muximux/muximux-publish.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.1.0 (36652f6)
  creationTimestamp: null
  labels:
    io.kompose.service: muximux
  name: muximux
spec:
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: muximux
    spec:
      containers:
      - env:
        - name: PGID
          value: "1000"
        - name: PUID
          value: "1000"
        - name: VIRTUAL_HOST
          value: muximux.slips23.com
        - name: VIRTUAL_PORT
          value: "8080"
        image: linuxserver/muximux
        name: muximux
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: muximux-volume
      restartPolicy: Always
      volumes:
      - name: muximux-volume
        persistentVolumeClaim:
          claimName: muximux-volume-claim
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.1.0 (36652f6)
  creationTimestamp: null
  labels:
    io.kompose.service: muximux
  name: muximux
spec:
  type: NodePort
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: muximux
